name:                MazeGenerator
version:             0.1.0.0
synopsis:            A 2D maze generator with OpenGL display
license:             PublicDomain
license-file:        LICENSE
author:              M. G. Meier
maintainer:          mgoremeier@gmail.com

category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable MazeGenerator
  main-is:              MazeGenerator.hs
  
  ghc-options:          -O2 -funbox-strict-fields
                        -threaded -with-rtsopts=-N
  
  other-extensions:     RecordWildCards, LambdaCase

  build-depends:        base                    >=4.7 && <5, 
                        OpenGL                  >=2.9 && <3, 
                        GLUT                    >=2.5 && <2.6, 
                        unordered-containers    >=0.2.4 && <0.2.6,
                        random                  >=1.0 && <1.1

  default-language:     Haskell2010

