name:                MazeGenerator
version:             0.1.0.0
synopsis:            A 2D maze generator/solver with OpenGL display
license:             PublicDomain
license-file:        LICENSE
author:              M. G. Meier
maintainer:          mgoremeier@gmail.com

category:            Graphics
build-type:          Simple
cabal-version:       >=2.0

executable MazeGenerator
  main-is:              MazeGenerator.hs

  other-modules:        GL
                        RandomGeneration
                        Types
  
  ghc-options:          -O2 -threaded -with-rtsopts=-N2
  
  default-extensions:   LambdaCase

  build-depends:          base                    >=4.18
                        , random                  ^>=1.3
                        , containers
                        , OpenGL                  >=3.0.3
                        , GLUT                    >=2.7.0.16

  default-language:     Haskell2010
